--- a/.github/workflows/test-update.yml
+++ b/.github/workflows/test-update.yml
@@ -19,5 +19,5 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Create .env file
         run: cp default.env .env
-      - name: Test ethd update for missed variables
+      - name: Test ethd update
         run: ./ethd update --debug --non-interactive
