README example improved (#9)

--- a/README.md.example
+++ b/README.md.example
@@ -7,6 +7,8 @@ and Prometheus remote write; use `:ext-network.yml` in `COMPOSE_FILE` inside `.e
 
 If you want the RPC ports exposed locally, use `rpc-shared.yml` in `COMPOSE_FILE` inside `.env`.
 
+## Quick Start
+
 The `./projectd` script can be used as a quick-start:
 
 `./projectd install` brings in docker-ce, if you don't have Docker installed already.
@@ -17,6 +19,17 @@ The `./projectd` script can be used as a quick-start:
 
 `./projectd up`
 
+## Software update
+
 To update the software, run `./projectd update` and then `./projectd up`
+
+## Customization
+
+`custom.yml` is not tracked by git and can be used to override anything in the provided yml files. If you use it,
+add it to `COMPOSE_FILE` in `.env`
+
+## Version
+
+name-of-project Docker uses a semver scheme.
 
 This is name-of-project Docker v1.0.0
