initial tron docker

--- a/default.env
+++ b/default.env
@@ -1,14 +1,22 @@
 # The settings are in .env, use "nano .env". Don't edit default.env itself.
-COMPOSE_FILE=#Some default yml files here
+COMPOSE_FILE=tron.yml
 
-# Further variables such as RPC, WS ports, P2P ports, NETWORk, SNAPSHOT, LOG_LEVEL, &c
+# Versions here https://github.com/rsksmart/rskj/releases
+TRON_VERSION_TAG=GreatVoyage-v4.8.0
+
+# Supports only *.tgz files
+SNAPSHOT=http://34.143.247.77/backup20250507/LiteFullNode_output-directory.tgz
+SNAPSHOT_HASH=http://34.143.247.77/backup20250507/LiteFullNode_output-directory.tgz.md5sum
+
+HTTP_FULL_NODE_PORT=8090
+HTTP_SOLIDITY_NODE_PORT=8091
+JSONRPC_HTTP_FULL_NODE_PORT=8545
+JSONRPC_HTTP_SOLIDITY_PORT=8555
 
 # Secure web proxy - advanced use, please see instructions
 DOMAIN=example.com
-RPC_HOST=<project>
-RPC_LB=<project>-lb
-WS_HOST=<projectws>
-WS_LB=<project>ws-lb
+RPC_HOST=tron
+RPC_LB=tron-lb
 
 # IP of the host you want to use in Docker (in case host has several IPs)
 HOST_IP=
