--- a/tron.yml
+++ b/tron.yml
@@ -15,6 +15,9 @@ services:
       args:
         - TRON_VERSION_TAG=${TRON_VERSION_TAG}
     image: tron:latest
+    environment:
+      - SNAPSHOT=${SNAPSHOT}
+      - SNAPSHOT_HASH=${SNAPSHOT_HASH}
     entrypoint: docker-entrypoint.sh
     pull_policy: never
     volumes:
