add log to console

--- a/tron/Dockerfile
+++ b/tron/Dockerfile
@@ -4,6 +4,7 @@ ARG TRON_VERSION_TAG
 
 COPY docker-entrypoint.sh /usr/local/bin/
 COPY main_net_config.conf /main_net_config.conf
+COPY log-stdout.xml /log-stdout.xml
 
 RUN apk add --no-cache aria2 curl bash && curl -L -o /FullNode.jar https://github.com/tronprotocol/java-tron/releases/download/${TRON_VERSION_TAG}/FullNode.jar;
 
