--- a/tron/Dockerfile
+++ b/tron/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:8-jre-alpine
+FROM eclipse-temurin:8-jre-noble
 ARG TRON_VERSION_TAG
 
 
@@ -6,6 +6,6 @@ COPY docker-entrypoint.sh /usr/local/bin/
 COPY main_net_config.conf /main_net_config.conf
 COPY log-stdout.xml /log-stdout.xml
 
-RUN apk add --no-cache aria2 curl bash && curl -L -o /FullNode.jar https://github.com/tronprotocol/java-tron/releases/download/${TRON_VERSION_TAG}/FullNode.jar;
+RUN apt update && apt install -y aria2 curl && apt clean && curl -L -o /FullNode.jar https://github.com/tronprotocol/java-tron/releases/download/${TRON_VERSION_TAG}/FullNode.jar;
 
 ENTRYPOINT [ "docker-entrypoint.sh" ]
